[gd_scene load_steps=5 format=2]

[ext_resource path="res://themes/DefaultTheme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/ui/Menu.gd" type="Script" id=2]
[ext_resource path="res://textures/logo.png" type="Texture" id=3]

[sub_resource type="GDScript" id=1]
script/source = "extends Control


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.

func show():
	.show()
	mouse_filter = Control.MOUSE_FILTER_STOP

func hide():
	.hide()
	mouse_filter = Control.MOUSE_FILTER_IGNORE
		
func _input(event):
	if event is InputEventMouseButton && !event.is_pressed() && visible:
		hide()
"

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pages" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="Control" parent="Pages"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Pages/Main"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 128
custom_constants/margin_top = 42
custom_constants/margin_left = 128
custom_constants/margin_bottom = 128
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="Pages/Main/MarginContainer"]
margin_left = 128.0
margin_top = 42.0
margin_right = 1792.0
margin_bottom = 952.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Pages/Main/MarginContainer/VBoxContainer2"]
margin_right = 1664.0
margin_bottom = 453.0
size_flags_vertical = 3
custom_constants/margin_right = 198
custom_constants/margin_left = 198
custom_constants/margin_bottom = 0

[node name="TextureRect" type="TextureRect" parent="Pages/Main/MarginContainer/VBoxContainer2/MarginContainer"]
margin_left = 198.0
margin_right = 1466.0
margin_bottom = 453.0
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="MarginContainer2" type="MarginContainer" parent="Pages/Main/MarginContainer/VBoxContainer2"]
margin_top = 457.0
margin_right = 1664.0
margin_bottom = 910.0
size_flags_vertical = 3
custom_constants/margin_right = 576
custom_constants/margin_top = 0
custom_constants/margin_left = 576
custom_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Pages/Main/MarginContainer/VBoxContainer2/MarginContainer2"]
margin_left = 576.0
margin_right = 1088.0
margin_bottom = 453.0
grow_horizontal = 2
size_flags_horizontal = 7
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_constants/separation = 10
alignment = 1

[node name="Continue" type="Button" parent="Pages/Main/MarginContainer/VBoxContainer2/MarginContainer2/VBoxContainer"]
visible = false
margin_right = 192.0
margin_bottom = 29.0
grow_horizontal = 2
size_flags_horizontal = 3
text = "Continue"

[node name="New Game" type="Button" parent="Pages/Main/MarginContainer/VBoxContainer2/MarginContainer2/VBoxContainer"]
margin_top = 164.0
margin_right = 512.0
margin_bottom = 199.0
size_flags_horizontal = 3
text = "New Game"

[node name="Options" type="Button" parent="Pages/Main/MarginContainer/VBoxContainer2/MarginContainer2/VBoxContainer"]
visible = false
margin_top = 39.0
margin_right = 192.0
margin_bottom = 68.0
text = "Options"

[node name="Credits" type="Button" parent="Pages/Main/MarginContainer/VBoxContainer2/MarginContainer2/VBoxContainer"]
margin_top = 209.0
margin_right = 512.0
margin_bottom = 244.0
text = "Credits"

[node name="Quit" type="Button" parent="Pages/Main/MarginContainer/VBoxContainer2/MarginContainer2/VBoxContainer"]
margin_top = 254.0
margin_right = 512.0
margin_bottom = 289.0
text = "Quit"

[node name="Credits" type="Control" parent="Pages"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Pages/Credits"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Pages/Credits"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Programming
Metin Ã‡etin

Art
Enis Can Kasrat


Sound effects obtained from https://www.zapsplat.com"
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="Pages/Main/MarginContainer/VBoxContainer2/MarginContainer2/VBoxContainer/New Game" to="." method="_on_New_Game_pressed"]
[connection signal="pressed" from="Pages/Main/MarginContainer/VBoxContainer2/MarginContainer2/VBoxContainer/Credits" to="." method="show_credits"]
[connection signal="pressed" from="Pages/Main/MarginContainer/VBoxContainer2/MarginContainer2/VBoxContainer/Quit" to="." method="quit_game"]
